--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Spider Clock Animation | @coding.stella</title>
+    <title>Spider Clock Animation | @rahat.dev</title>
     <link rel="stylesheet" href="./style.css">
 
 </head>
